Closed
Bug 255733
Opened 21 years ago
Closed 21 years ago
errors trying to export address books
Categories
(Thunderbird :: Address Book, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird0.8
People
(Reporter: mscott, Assigned: mscott)
Details
(Keywords: regression)
Attachments
(1 file)
|
5.20 KB,
patch
|
Details | Diff | Splinter Review |
From the forums:
"Win 2K, Thunderbird 0.8 (version 0.7+ (20040813)).
When I open the Address Book and try to export and Address Book (to copy and
import into another TBird installation) I get error:
"Export Failed
Component returned failure code: 0x80004005 (NS_ERROR_FAILURE)
[nslAddressBook.exportAddressBook] "
Looks like a new JS error when trying to export.
| Assignee | ||
Updated•21 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird0.8
| Assignee | ||
Comment 1•21 years ago
|
||
I think Mike introduced this regression when he landed Bug #240723 on the branch.
The error is coming from the AB's attempt to bring up a file picker.
Keywords: regression
| Assignee | ||
Comment 2•21 years ago
|
||
| Assignee | ||
Comment 3•21 years ago
|
||
I checked in the fix for Mike.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 4•21 years ago
|
||
I am shamed. Will atone.
You need to log in
before you can comment on or make changes to this bug.
Description
•