Bug #255733--> Fix the regression introduced by Bug #240723, unable to export address book data.